ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration13/input.ts.stderr
error[1049]: A 'set' accessor must have exactly one parameter
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration13/input.ts:3:4
  |
3 |    set Foo() { }
  |    ^^^

